Change Compression Type

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         frameworkUrl: buildUrl + "/DoodleJump.framework.js.br",
         codeUrl: buildUrl + "/DoodleJump.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
+        companyName: "DeathArc",
         productName: "Doodle Jump",
         productVersion: "1.0",
         showBanner: unityShowBanner,
