--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/DoodleJump.loader.js";
       var config = {
-        dataUrl: buildUrl + "/DoodleJump.data.br",
-        frameworkUrl: buildUrl + "/DoodleJump.framework.js.br",
-        codeUrl: buildUrl + "/DoodleJump.wasm.br",
+        dataUrl: buildUrl + "/DoodleJump.data",
+        frameworkUrl: buildUrl + "/DoodleJump.framework.js",
+        codeUrl: buildUrl + "/DoodleJump.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DeathArc",
         productName: "Doodle Jump",
